FIX: send signal error fix, 실시간 랭킹 visible설정

--- a/frontend/src/features/game/Game.css
+++ b/frontend/src/features/game/Game.css
@@ -552,5 +552,8 @@ tbody {
   display: block;
   font-size: 30px;
 }
+.invisible {
+  visibility: hidden;
+}
 
 /*랭킹 테이블*/
